# ark-piop

./: CHANGELOG.md  Cargo.toml  SECURITY.md  justfile  readme.md
.github/workflows/: ci.yml
benches/: pipeline.rs
examples/: calibrate_msm.rs
macros/: Cargo.toml
macros/src/: lib.rs
piop/: Cargo.toml
piop/src/: errors.rs  lib.rs  test_utils.rs
piop/src/arithmetic/: errors.rs  mod.rs
piop/src/arithmetic/mat_poly/: lde.rs  mle.rs  mod.rs  utils.rs
piop/src/arithmetic/mle/: mod.rs
piop/src/arithmetic/mle/mat/: mod.rs
piop/src/arithmetic/mle/virt/: mod.rs
piop/src/arithmetic/virt_poly/: hp_interface.rs
piop/src/pcs/: batching.rs  errors.rs  mod.rs  structs.rs  utils.rs
piop/src/pcs/kzg10/: mod.rs  srs.rs
piop/src/pcs/kzh/: mod.rs  srs.rs  structs.rs  tests.rs
piop/src/pcs/pst13/: batching.rs  mod.rs  srs.rs  structs.rs  util.rs
piop/src/piop/: errors.rs  mod.rs  structs.rs
piop/src/piop/sum_check/: mod.rs  prover.rs  verifier.rs
piop/src/prover/: errors.rs  mod.rs  tracker.rs
piop/src/prover/structs/: mod.rs  polynomial.rs  proof.rs
piop/src/setup/: errors.rs  mod.rs  structs.rs
piop/src/structs/: claim.rs  mod.rs
piop/src/transcript/: errors.rs  mod.rs
piop/src/util/: display.rs
piop/src/verifier/: errors.rs  mod.rs  tracker.rs
piop/src/verifier/structs/: mod.rs  oracle.rs  state.rs
src/: artifact.rs  errors.rs  lib.rs  test_utils.rs
src/arithmetic/: errors.rs  mod.rs  msm.rs
src/arithmetic/ff/: mod.rs
src/arithmetic/mat_poly/: digest.rs  lde.rs  mle.rs  mod.rs  utils.rs
src/arithmetic/virt_poly/: hp_interface.rs  mod.rs
src/pcs/: errors.rs  mod.rs  utils.rs
src/pcs/kzg10/: mod.rs  srs.rs  structs.rs
src/pcs/kzh/: mod.rs  srs.rs  structs.rs
src/pcs/pst13/: batching.rs  mod.rs  srs.rs  structs.rs
src/piop/: errors.rs  mod.rs  structs.rs
src/piop/keyed_sumcheck/: honest_prover.rs  mod.rs
src/piop/lookup_check/: mod.rs  utils.rs
src/piop/multiplicity_check/: honest_prover.rs  mod.rs
src/piop/sum_check/: mod.rs  prover.rs  tests.rs  verifier.rs
src/prover/: errors.rs  mod.rs  tracker.rs
src/prover/structs/: mod.rs  polynomial.rs  proof.rs
src/prover/tracker/: algebra.rs  claims.rs  core_impl.rs  evaluation.rs  mod.rs  tracking.rs
src/prover/tracker/compile/: mod.rs  pcs.rs  sumcheck.rs  virt_poly.rs
src/setup/: errors.rs  mod.rs  structs.rs
src/structs/: claim.rs  mod.rs
src/tracker_core/: mod.rs  pipeline.rs
src/transcript/: errors.rs  mod.rs
src/types/: artifact.rs  mod.rs
src/verifier/: errors.rs  mod.rs  tracker.rs
src/verifier/structs/: mod.rs  oracle.rs  state.rs
src/verifier/tracker/: algebra.rs  claims.rs  core_impl.rs  evaluation.rs  mod.rs  tracking.rs  verify.rs
tests/: pipeline.rs  properties.rs  soundness.rs
